@@ -3,9 +3,13 @@ Changelog
 
 2015-04-XX
 ----------
-BACKWARDS INCOMPATIBLE
+BACKWARDS INCOMPATIBLE API CHANGES
 * ResourceMixin.users_for_perm() accepts additional parameters group_ids, and user_ids
   to limit the amount of results if needed
+* User.permissions, Resource.perms_for_user, Resource.direct_perms_for_user,
+  Resource.group_perms_for_user, Resource.users_for_perm_detailed, Resource.users_for_perm
+  now return list of detailed PermissionTuple's instead simple [id, perm_name] pairs
+  this will break your application
 
 
 2015-02-18
